gitops-pipeline/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  labels:
    app.kubernetes.io/name: podinfo
    app.kubernetes.io/component: web-application
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 9898
    targetPort: http
    protocol: TCP
  - name: grpc
    port: 9999
    targetPort: grpc
    protocol: TCP
  - name: http-metrics
    port: 9797
    targetPort: http-metrics
    protocol: TCP
  selector:
    app.kubernetes.io/name: podinfo
    app.kubernetes.io/component: web-application
